[package]
name = "bevy_uikit"
version = "0.0.0"
description = "Direct UIKit backend for Bevy Engine"
repository = "https://github.com/madsmtm/bevy_uikit"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "uikit", "ios", "gui"]
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2021"
rust-version = "1.83"

exclude = [".github/"]

[dependencies]
# bevy
bevy_a11y = "0.15"
bevy_app = "0.15"
bevy_derive = "0.15"
bevy_ecs = "0.15"
bevy_input = "0.15"
# bevy_input_focus = "0.15"
bevy_log = "0.15"
bevy_math = "0.15"
bevy_reflect = "0.15"
bevy_window = "0.15"
bevy_utils = "0.15"
bevy_tasks = "0.15"
# bevy_platform_support = { version = "0.15", default-features = false, features = [
#     "std",
# ] }

# bevy optional
bevy_asset = { version = "0.15", optional = true }
bevy_image = { version = "0.15", optional = true }

# Apple-specific
dispatch2 = "0.2"
block2 = "0.6"
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
objc2-metal = "0.3"
objc2-foundation = "0.3"
objc2-ui-kit = "0.3"

# other
approx = { version = "0.5", default-features = false }
cfg-if = "1.0"
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }
bytemuck = { version = "1.5", optional = true }
wgpu-types = { version = "23", optional = true }
accesskit = "0.17"
tracing = { version = "0.1", default-features = false, features = ["std"] }
