[package]
name = "bevy_uikit"
version = "0.0.0"
description = "Direct UIKit backend for Bevy Engine"
repository = "https://github.com/madsmtm/bevy_uikit"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "uikit", "ios", "gui"]
authors = ["Mads Marquart <mads@marquart.dk>"]
edition = "2021"
rust-version = "1.83"
exclude = [".github/", "assets"]

[features]
# Do not use scenes. Useful for testing `UIApplicationDelegate`
# support even on newer devices that prefers scenes.
no-scene = []

[dependencies]
# bevy
bevy_a11y = { git = "https://github.com/madsmtm/bevy", branch = "uikit" }
bevy_app = { git = "https://github.com/madsmtm/bevy", branch = "uikit" }
bevy_derive = { git = "https://github.com/madsmtm/bevy", branch = "uikit" }
bevy_ecs = { git = "https://github.com/madsmtm/bevy", branch = "uikit" }
bevy_input = { git = "https://github.com/madsmtm/bevy", branch = "uikit" }
bevy_log = { git = "https://github.com/madsmtm/bevy", branch = "uikit" }
bevy_math = { git = "https://github.com/madsmtm/bevy", branch = "uikit" }
bevy_reflect = { git = "https://github.com/madsmtm/bevy", branch = "uikit" }
bevy_window = { git = "https://github.com/madsmtm/bevy", branch = "uikit" }  # Different paradigm, will need changes to really make sense
bevy_tasks = { git = "https://github.com/madsmtm/bevy", branch = "uikit" }

# Apple-specific
dispatch2 = "0.2"
block2 = "0.6"
objc2 = "0.6"
objc2-core-foundation = "0.3"
objc2-core-graphics = "0.3"
objc2-metal = "0.3"
objc2-foundation = "0.3"
objc2-ui-kit = "0.3"
libc = "0.2"

# other
approx = { version = "0.5", default-features = false }
cfg-if = "1.0"
raw-window-handle = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }
bytemuck = { version = "1.5", optional = true }
accesskit = "0.17"
tracing = { version = "0.1", default-features = false, features = ["std"] }

# For examples
[dev-dependencies]
bevy = { git = "https://github.com/madsmtm/bevy", branch = "uikit", default-features = false, features = [
    # Default, except for `winit`
    "android-game-activity",
    "android_shared_stdcxx",
    "animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    # "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
] }
